# coral-aibox

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile_rknn  Dockerfile_rt  README.md  aibox-nginx.conf  docker-compose-local.yml  docker-compose-onnx.yml  docker-compose-rknn.yml  docker-compose-rt.yml  docker-compose.yml  init-linux.sh  pyproject.toml  supervisord.conf
.github/workflows/: build-and-push-and-run-on-tag.yml  build-and-push-rknn-compose.yml  build-and-push-rt-compose.yml  build-push-on-rknn-single.yml  build-push-on-rt-single.yml  single-build-push-on-tag.yml
aibox-camera/: Dockerfile  Dockerfile_rknn  README.md  pyproject.toml
aibox-camera/aibox-camera/: config.json  node.py  schema.py  web.py
aibox-camera/aibox-camera/algrothms/: streamer.py
aibox-face/: Dockerfile  Dockerfile_rknn  Dockerfile_rt  README.md  pyproject.toml
aibox-face/aibox-face/: config.json  det_dataset.txt  feature_dataset.txt  node.py  schema.py  web.py
aibox-face/aibox-face/algrothms/: featuredb.py  gossip.py  inference.py  utils.py
aibox-person/: Dockerfile  Dockerfile_rknn  Dockerfile_rt  README.md  pyproject.toml
aibox-person/aibox-person/: config.json  det_dataset.txt  feature_dataset.txt  node.py  schema.py  test.py  web.py
aibox-person/aibox-person/algrothms/: featuredb.py  inference.py  utils.py
aibox-record/: Dockerfile  README.md  pyproject.toml
aibox-record/aibox-record/: config.json  node.py  web.py
aibox-record/aibox-record/algrothms/: core.py  recorder.py
aibox-report/: Dockerfile  Dockerfile_rknn  Dockerfile_rt  README.md  pyproject.toml
aibox-report/aibox-report/: config.json  node.py  web.py
aibox-report/aibox-report/algrothms/: core.py  event.py  gpio.py  report.py  utils.py
aibox-report/libs/: gpio_control-0.2.0-cp38-cp38-linux_aarch64.whl
aibox-web/: .env.production  Dockerfile  next.config.mjs  package-lock.json  package.json
aibox-web/app/: layout.tsx  page.tsx
aibox-web/app/configuration/: page.tsx
aibox-web/app/event/: page.tsx
aibox-web/app/mask/: page.tsx
aibox-web/app/predict/: page.tsx
aibox-web/app/preload/: page.tsx
aibox-web/app/preload/face/: page.tsx
aibox-web/app/preload/person/: page.tsx
aibox-web/app/record/: page.tsx
aibox-web/components/: activeModel.tsx  addCamera.tsx  baseUrlCard.tsx  cameraMask.tsx  canvas.tsx  cardImage.tsx  cardimage.css  changeResolution.tsx  deleteCamera.tsx  fileList.tsx  folder.tsx  mqttCard.tsx  serverCard.tsx  showPerson.tsx  usersFaceList.tsx
aibox-web/components/api/: context.ts  utils.ts
aibox-web/components/types/: type.ts
