[tool.poetry]
name = "aibox-camera"
version = "0.1.0"
description = ""
authors = ["zhaokefei <zhaokefei@tezign.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.110.1"
loop-pycoral = {version = "^0.1.5", source = "looptech"}
uvicorn = "^0.29.0"






[[tool.poetry.source]]
name = "looptech"
url = "http://47.116.14.85:9000/simple"
priority = "supplemental"


[tool.poetry.group.rknn.dependencies]
pygobject = "^3.48.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
