[tool.poetry]
name = "aibox-record"
version = "0.1.0"
description = ""
authors = ["zhaokefei <zhaokefei@tezign.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
loop-pycoral = {version = "^0.1.3", source = "looptech"}
fastapi = "^0.110.2"
uvicorn = "^0.29.0"
numpy = "~1.24"
aiofiles = "^24.1.0"


[[tool.poetry.source]]
name = "looptech"
url = "http://47.116.14.85:9000/simple"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
