[tool.poetry]
name = "aibox-report"
version = "0.1.0"
description = ""
authors = ["zhaokefei <zhaokefei@tezign.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
loop-pycoral = {version = "^0.1.3", source = "looptech"}
filterpy = "^1.4.5"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[[tool.poetry.source]]
name = "looptech"
url = "http://47.116.14.85:9000/simple"
priority = "supplemental"


[tool.poetry.group.rknn.dependencies]
gpio-control = {path = "libs/gpio_control-0.2.0-cp38-cp38-linux_aarch64.whl"}


[tool.poetry.group.rt.dependencies]
jetson-gpio = "^2.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
